--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -1,3 +1,7 @@
+#########################
+## Definitely relevant ##
+#########################
+
 @inproceedings{pennington2014glove,
   author = {Jeffrey Pennington and Richard Socher and Christopher D. Manning},
   booktitle = {Empirical Methods in Natural Language Processing (EMNLP)},
@@ -6,6 +10,27 @@
   pages = {1532--1543},
   url = {http://www.aclweb.org/anthology/D14-1162},
 }
+
+@inproceedings{choi2015depends,
+  title={It Depends: Dependency Parser Comparison Using A Web-based Evaluation Tool.},
+  author={Choi, Jinho D and Tetreault, Joel R and Stent, Amanda},
+  booktitle={ACL (1)},
+  pages={387--396},
+  year={2015}
+}
+
+@inproceedings{honnibal2015improved,
+  title={An Improved Non-monotonic Transition System for Dependency Parsing.},
+  author={Honnibal, Matthew and Johnson, Mark and others},
+  booktitle={EMNLP},
+  pages={1373--1378},
+  year={2015}
+}
+
+###########################
+## Probably not relevant ##
+###########################
+
 @article{jiang2016evaluating,
   title={Evaluating and Combining Named Entity Recognition Systems},
   author={Jiang, Ridong and Banchs, Rafael E and Li, Haizhou},
