WordNet can now also be used to check for synonyms.

--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -27,6 +27,13 @@
   year={2015}
 }
 
+@misc{kilgarriff2000wordnet,
+  title={WordNet: An Electronic Lexical Database},
+  author={Kilgarriff, Adam and Fellbaum, Christiane},
+  year={2000},
+  publisher={JSTOR}
+}
+
 ###########################
 ## Probably not relevant ##
 ###########################
