--- a/Thesis/Concept Suggestor.tex
+++ b/Thesis/Concept Suggestor.tex
@@ -31,6 +31,7 @@ It is difficult for analysts from different domains to communicate about their p
 
 SpaCy is one of the fastest and most accurate publicly available Natural Language Processing (NLP) toolkits available.\cite{choi2015depends}
 SpaCy uses GloVe to create word vectors. GloVe is an unsupervised learning algorithm for obtaining vector representations for words.\cite{pennington2014glove} These word vectors can be used to model semantic similarity of words.
+WordNet is an electronic lexical database.\cite{kilgarriff2000wordnet}
 
 \section{Algorithms}
 
