--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -34,6 +34,65 @@
   publisher={JSTOR}
 }
 
+@inproceedings{strube2006wikirelate,
+  title={WikiRelate! Computing semantic relatedness using Wikipedia},
+  author={Strube, Michael and Ponzetto, Simone Paolo},
+  booktitle={AAAI},
+  volume={6},
+  pages={1419--1424},
+  year={2006}
+}
+
+# A good article on a variety of semantic similarity measures.
+@article{meng2013review,
+  title={A review of semantic similarity measures in wordnet},
+  author={Meng, Lingling and Huang, Runqing and Gu, Junzhong},
+  journal={International Journal of Hybrid Information Technology},
+  volume={6},
+  number={1},
+  pages={1--12},
+  year={2013}
+}
+
+@inproceedings{zhou2008new,
+  title={New model of semantic similarity measuring in wordnet},
+  author={Zhou, Zili and Wang, Yanna and Gu, Junzhong},
+  booktitle={Intelligent System and Knowledge Engineering, 2008. ISKE 2008. 3rd International Conference on},
+  volume={1},
+  pages={256--261},
+  year={2008},
+  organization={IEEE}
+}
+
+@inproceedings{seco2004intrinsic,
+  title={An intrinsic information content metric for semantic similarity in WordNet},
+  author={Seco, Nuno and Veale, Tony and Hayes, Jer},
+  booktitle={Proceedings of the 16th European conference on artificial intelligence},
+  pages={1089--1090},
+  year={2004},
+  organization={IOS Press}
+}
+
+@incollection{blanchard2006tree,
+  title={A tree-based similarity for evaluating concept proximities in an ontology},
+  author={Blanchard, Emmanuel and Kuntz, Pascale and Harzallah, Mounira and Briand, Henri},
+  booktitle={Data Science and Classification},
+  pages={3--11},
+  year={2006},
+  publisher={Springer}
+}
+
+@article{budanitsky2006evaluating,
+  title={Evaluating wordnet-based measures of lexical semantic relatedness},
+  author={Budanitsky, Alexander and Hirst, Graeme},
+  journal={Computational Linguistics},
+  volume={32},
+  number={1},
+  pages={13--47},
+  year={2006},
+  publisher={MIT Press}
+}
+
 ###########################
 ## Probably not relevant ##
 ###########################
