Added a bit on measuring semantic similarity/relatedness

--- a/Thesis/Concept Suggestor.tex
+++ b/Thesis/Concept Suggestor.tex
@@ -41,6 +41,7 @@ These are the algorithms.
 
 \section{Evaluation Methodology}
 
+% Just semantic similarity
 Although there is no standard for computational evaluation of semantic similarity, there are generally three accepted methods.\cite{meng2013review}
 
 Firstly, a theoretical examination of a computational measure can be made for those mathematical properties thought desirable, such as whether it is a metric, whether its parameter-projections are smooth functions, and so on. % TODO: Find out exactly what this means & rephrase it so I understand. It's quite complex language. Taken from meng2013review
@@ -48,6 +49,9 @@ Firstly, a theoretical examination of a computational measure can be made for th
 Secondly, the coefficients of correlation with human judgement can be calculated, measured, and compared.\cite{zhou2008new,seco2004intrinsic}
 
 Thirdly, if an application requires a measure of semantic similarity, we can compare the performance of different measures, while all other aspects of the application remain constant, to find the most effective measure.\cite{blanchard2006tree,budanitsky2006evaluating}
+
+% Semantic similarity and relatedness
+The techniques for measuring semantic similarity and relatedness can be roughly categorized into two main categories:\cite{agirre2009study} Those that rely on pre-existing knowledge, such as thesauri, encyclopedias, and semantic networks,\cite{alvarez2007graph,yang2005measuring,hughes2007lexical} and those inducing distributional properties of words from corpora.\cite{sahami2006web,chen2006novel,bollegala2007measuring}
 
 
 % Below is subject matter that I want to have handled in this section.
