--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -53,7 +53,6 @@
   pages={1--12},
   year={2013}
 }
-
 @inproceedings{zhou2008new,
   title={New model of semantic similarity measuring in wordnet},
   author={Zhou, Zili and Wang, Yanna and Gu, Junzhong},
@@ -63,7 +62,6 @@
   year={2008},
   organization={IEEE}
 }
-
 @inproceedings{seco2004intrinsic,
   title={An intrinsic information content metric for semantic similarity in WordNet},
   author={Seco, Nuno and Veale, Tony and Hayes, Jer},
@@ -72,7 +70,6 @@
   year={2004},
   organization={IOS Press}
 }
-
 @incollection{blanchard2006tree,
   title={A tree-based similarity for evaluating concept proximities in an ontology},
   author={Blanchard, Emmanuel and Kuntz, Pascale and Harzallah, Mounira and Briand, Henri},
@@ -81,7 +78,6 @@
   year={2006},
   publisher={Springer}
 }
-
 @article{budanitsky2006evaluating,
   title={Evaluating wordnet-based measures of lexical semantic relatedness},
   author={Budanitsky, Alexander and Hirst, Graeme},
@@ -91,6 +87,63 @@
   pages={13--47},
   year={2006},
   publisher={MIT Press}
+}
+
+# A good article on measuring semantic similarity and relatedness.
+@inproceedings{agirre2009study,
+  title={A study on similarity and relatedness using distributional and wordnet-based approaches},
+  author={Agirre, Eneko and Alfonseca, Enrique and Hall, Keith and Kravalova, Jana and Pa{\c{s}}ca, Marius and Soroa, Aitor},
+  booktitle={Proceedings of Human Language Technologies: The 2009 Annual Conference of the North American Chapter of the Association for Computational Linguistics},
+  pages={19--27},
+  year={2009},
+  organization={Association for Computational Linguistics}
+}
+@inproceedings{alvarez2007graph,
+  title={A graph modeling of semantic similarity between words},
+  author={Alvarez, Marco A and Lim, SeungJin},
+  booktitle={Semantic Computing, 2007. ICSC 2007. International Conference on},
+  pages={355--362},
+  year={2007},
+  organization={IEEE}
+}
+@inproceedings{yang2005measuring,
+  title={Measuring semantic similarity in the taxonomy of WordNet},
+  author={Yang, Dongqiang and Powers, David MW},
+  booktitle={Proceedings of the Twenty-eighth Australasian conference on Computer Science-Volume 38},
+  pages={315--322},
+  year={2005},
+  organization={Australian Computer Society, Inc.}
+}
+@inproceedings{hughes2007lexical,
+  title={Lexical Semantic Relatedness with Random Graph Walks.},
+  author={Hughes, Thad and Ramage, Daniel},
+  booktitle={EMNLP-CoNLL},
+  pages={581--589},
+  year={2007}
+}
+@inproceedings{sahami2006web,
+  title={A web-based kernel function for measuring the similarity of short text snippets},
+  author={Sahami, Mehran and Heilman, Timothy D},
+  booktitle={Proceedings of the 15th international conference on World Wide Web},
+  pages={377--386},
+  year={2006},
+  organization={AcM}
+}
+@inproceedings{chen2006novel,
+  title={Novel association measures using web search with double checking},
+  author={Chen, Hsin-Hsi and Lin, Ming-Shun and Wei, Yu-Chuan},
+  booktitle={Proceedings of the 21st International Conference on Computational Linguistics and the 44th annual meeting of the Association for Computational Linguistics},
+  pages={1009--1016},
+  year={2006},
+  organization={Association for Computational Linguistics}
+}
+@article{bollegala2007measuring,
+  title={Measuring semantic similarity between words using web search engines.},
+  author={Bollegala, Danushka and Matsuo, Yutaka and Ishizuka, Mitsuru},
+  journal={www},
+  volume={7},
+  pages={757--766},
+  year={2007}
 }
 
 ###########################
