Added a tiny piece on Recommender Systems.

--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -146,6 +146,13 @@
   year={2007}
 }
 
+@book{ricci2011introduction,
+  title={Introduction to recommender systems handbook},
+  author={Ricci, Francesco and Rokach, Lior and Shapira, Bracha},
+  year={2011},
+  publisher={Springer}
+}
+
 ###########################
 ## Probably not relevant ##
 ###########################
