--- a/Thesis/Concept Suggestor.tex
+++ b/Thesis/Concept Suggestor.tex
@@ -29,6 +29,8 @@ It is difficult for analysts from different domains to communicate about their p
 
 \section{Related Work}
 
+Recommender systems are software tools and techniques providing suggestions for items to be of use to a user.\cite{ricci2011introduction}
+
 WordNet is an electronic lexical database.\cite{kilgarriff2000wordnet}
 SpaCy is one of the fastest and most accurate publicly available Natural Language Processing (NLP) toolkits available.\cite{choi2015depends}
 SpaCy uses GloVe to create word vectors. GloVe is an unsupervised learning algorithm for obtaining vector representations for words.\cite{pennington2014glove} These word vectors can be used to model semantic similarity of words. Spacy's default word vector library is trained on Wikipedia. Wikipedia has proven to be a valuable source for computing semantic relatedness measures.\cite{strube2006wikirelate}
