--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -153,6 +153,15 @@
   publisher={Springer}
 }
 
+@article{levy2015improving,
+  title={Improving distributional similarity with lessons learned from word embeddings},
+  author={Levy, Omer and Goldberg, Yoav and Dagan, Ido},
+  journal={Transactions of the Association for Computational Linguistics},
+  volume={3},
+  pages={211--225},
+  year={2015}
+}
+
 ###########################
 ## Probably not relevant ##
 ###########################
