--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -98,6 +98,33 @@
   year={2009},
   organization={Association for Computational Linguistics}
 }
+# A good article about all the semantic relatedness-measures in WordNet.
+@article{budanitsky2006evaluating,
+  title={Evaluating wordnet-based measures of lexical semantic relatedness},
+  author={Budanitsky, Alexander and Hirst, Graeme},
+  journal={Computational Linguistics},
+  volume={32},
+  number={1},
+  pages={13--47},
+  year={2006},
+  publisher={MIT Press}
+}
+@inproceedings{seco2004intrinsic,
+  title={An intrinsic information content metric for semantic similarity in WordNet},
+  author={Seco, Nuno and Veale, Tony and Hayes, Jer},
+  booktitle={Proceedings of the 16th European conference on artificial intelligence},
+  pages={1089--1090},
+  year={2004},
+  organization={IOS Press}
+}
+@inproceedings{mihalcea2006corpus,
+  title={Corpus-based and knowledge-based measures of text semantic similarity},
+  author={Mihalcea, Rada and Corley, Courtney and Strapparava, Carlo and others},
+  booktitle={AAAI},
+  volume={6},
+  pages={775--780},
+  year={2006}
+}
 @inproceedings{alvarez2007graph,
   title={A graph modeling of semantic similarity between words},
   author={Alvarez, Marco A and Lim, SeungJin},
