--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -189,6 +189,23 @@
   year={2015}
 }
 
+@inproceedings{pedersen2004wordnet,
+  title={WordNet:: Similarity: measuring the relatedness of concepts},
+  author={Pedersen, Ted and Patwardhan, Siddharth and Michelizzi, Jason},
+  booktitle={Demonstration papers at HLT-NAACL 2004},
+  pages={38--41},
+  year={2004},
+  organization={Association for Computational Linguistics}
+}
+
+@online{nagel2017commoncrawl,
+  title={May 2017 Crawl Archive Now Available},
+  author={Nagel, Sebastian},
+  year={2017},
+  url={https://commoncrawl.org/2017/06/may-2017-crawl-archive-now-available/},
+  urldate={2017-06-20}
+}
+
 ###########################
 ## Probably not relevant ##
 ###########################
