--- a/Thesis/Concept Suggestor.tex
+++ b/Thesis/Concept Suggestor.tex
@@ -24,38 +24,38 @@ This is the abstract.
 
 \section{Introduction}
 
-ATM is a cross-disciplinary field that requires analysts from multiple domains such as security, safety, and business. When discussing problems about the ATM field, analysts often create domain-specific models that employ both shared and domain-specific concepts. To facilitate these discussions it is important that domain-specific models from one domain can be used in communication with other domains. This can be done by ensuring that domains use similar concepts in their models where possible.
+Air Traffic Management (ATM) is a cross-disciplinary field that requires analysts from multiple domains such as security, safety, and business. When discussing problems about the ATM field, analysts often create domain-specific models that employ both shared and domain-specific concepts. To facilitate these discussions it is important that domain-specific models from one domain can be used in communication with other domains. This can be done by ensuring that domains use similar concepts in their models where possible.
 
-It is difficult for analysts from different domains to communicate about their proposed solutions to a given ATM problem. This difficulty is partially caused by a difference in concepts used in their modeling which reduces the usefulness of these models in communication with other domains.
+It is difficult for analysts from different domains to communicate about their proposed solutions to a given ATM problem. This difficulty is partially caused by a difference in concepts used in their modeling which reduces the usefulness of these models in communication with other domains. % TODO: Expand introduction
 
 \section{Related Work}
 
-Recommender systems are software tools and techniques providing suggestions for items to be of use to a user.\cite{ricci2011introduction}
+Recommender systems are software tools and techniques providing suggestions for items to be of use to a user\cite{ricci2011introduction}. % TODO: Ensure that paragraphs have at least three sentences.
 
-WordNet is an electronic lexical database.\cite{kilgarriff2000wordnet}
-SpaCy is one of the fastest and most accurate publicly available Natural Language Processing (NLP) toolkits available.\cite{choi2015depends}
-SpaCy uses GloVe to create word vectors. GloVe is an unsupervised learning algorithm for obtaining vector representations for words. Training is performed on aggregated global word-word co-occurrence statistics from a corpus.\cite{pennington2014glove} Although GloVe measures co-occurrence and not semantic similarity or relatedness, its results can be used as a rough estimate of semantic similarity or relatedness.\cite{levy2015improving} SpaCy's default word vector library is trained on the Common Crawl corpus. The Common Crawl corpus contains over 2.96 billion web pages and over 250 TiB of uncompressed content as of June 2017.\cite{nagel2017commoncrawl} % Wikipedia has proven to be a valuable source for computing semantic relatedness measures.\cite{strube2006wikirelate} % TODO: Determine whether the last sentence is still relevant, and/or replace with "Common Crawl is good corpus".
+WordNet is an electronic lexical database\cite{kilgarriff2000wordnet}. % TODO: Add some more information on WordNet.
+SpaCy is one of the fastest and most accurate publicly available Natural Language Processing (NLP) toolkits available\cite{choi2015depends}.
+SpaCy uses GloVe to create word vectors. GloVe is an unsupervised learning algorithm for obtaining vector representations for words. Training is performed on aggregated global word-word co-occurrence statistics from a corpus\cite{pennington2014glove}. Although GloVe measures co-occurrence and not semantic similarity or relatedness, its results can be used as a rough estimate of semantic similarity or relatedness\cite{levy2015improving}. SpaCy's default word vector library is trained on the Common Crawl corpus. The Common Crawl corpus contains over 2.96 billion web pages and over 250 TiB of uncompressed content as of June 2017\cite{nagel2017commoncrawl}. % Wikipedia has proven to be a valuable source for computing semantic relatedness measures\cite{strube2006wikirelate}. % TODO: Determine whether the last sentence is still relevant, and/or replace with "Common Crawl is good corpus".
 
-Most methods of computing semantic relatedness measures such as word vectors rely on training an algorithm on a dataset. Public datasets, such as Google, Wikipedia, or WordNet are often used, although private datasets can also be used to improve context-sensitivity. Wikipedia and WordNet have proven to perform well in a variety of situations.\cite{strube2006wikirelate}
+Most methods of computing semantic relatedness measures such as word vectors rely on training an algorithm on a dataset. Public datasets, such as Google, Wikipedia, or WordNet are often used, although private datasets can also be used to improve context-sensitivity. Wikipedia and WordNet have proven to perform well in a variety of situations\cite{strube2006wikirelate}. % This section lacks a clear structure. TODO: add clear structure. Add a paragraph that talks about NLP in general, its application areas, etc. I can add more methods/tools, also try to group the data sets. I need to mention word2vec algorithms as a baseline. NLTK is missing. When I cite a work, explain why it is relevant, what the advantages and limitations are of using it.
 
 \section{Algorithms}
 
-The Concept Suggestor uses several steps to decide which concepts get suggested to the user.
+The Concept Suggestor uses several steps to decide which concepts get suggested to the user. % TODO: Add a high level description of the method I propose. There should be pseudo-code or a process diagram that explains the steps in detail.
 
 \subsection{Semantic Similarity of two Words}
 
-The first step is to determine semantic similarity of concepts. The Concept Suggestor combines two algorithms for this: SpaCy's similarity function and WordNet's similarity function. The mean of these two algorithms is computed to determine overall word similarity. The following formula represents the similarity calculations:
+The first step is to determine semantic similarity of concepts. The Concept Suggestor combines two algorithms for this: SpaCy's similarity function and WordNet's similarity function. The mean of these two algorithms is computed to determine overall word similarity. The following formula represents the similarity calculations: % TODO: Explain differences in the implementation. Also add some examples how the comparison results differ.
 \begin{equation} \label{eq:totalsimilarity}
 	\frac{spacySim(wordA, wordB) + wordnetSim(wordA, wordB)} {2}
 \end{equation}
 
 \subsubsection{SpaCy}
-SpaCy's word vectors are calculated by using the GloVe algorithm on the Common Crawl corpus. The similarity function of SpaCy computes the cosine of two word vectors. This results in a number between zero and one, where a value of zero indicates that two words are dissimilar, and a value of one indicates that two words are similar to each other.
+SpaCy's word vectors are calculated by using the GloVe algorithm on the Common Crawl corpus. The similarity function of SpaCy computes the cosine of two word vectors. This results in a number between zero and one, where a value of zero indicates that two words are dissimilar, and a value of one indicates that two words are similar to each other. % TODO: If the content is just one paragraph (or two) there is no need to create a subsection. Just keep the paragraph.
 
 \subsubsection{WordNet}
 WordNet is a public electronic lexical database that began in the mid-1980s in the Princeton University Department of Psychology and has been regularly updated and improved since then. The similarity function of WordNet returns a score between zero and one denoting how similar two words are, based on the shortest path that connects the senses in the is-a (hypernym/hyponym) taxonomy. % TODO: make the last sentence not plagiarism. Source: http://www.nltk.org/howto/wordnet.html 
 
-WordNet offers six methods to measure similarity.\cite{pedersen2004wordnet}
+WordNet offers six methods to measure similarity\cite{pedersen2004wordnet}. % TODO: Select one or two pairs of words and calculate the results for these different methods and show the results in a table.
 \begin{itemize}
 	\item Path Similarity: Returns a score denoting how similar two word senses are, based on the shortest path that connects the senses in the is-a (hypernym/hyponym) taxonomy. The score is in the range 0 to 1. % TODO: make this not copied from http://www.nltk.org/howto/wordnet.html
 	\item Leacock-Chodorow Similarity: Returns a score denoting how similar two word senses are, based on the shortest path that connects the senses (as above) and the maximum depth of the taxonomy in which the senses occur. The relationship is given as \(-log(p/2d)\) where p is the shortest path length and d the taxonomy depth. % TODO: make this not copied from http://www.nltk.org/howto/wordnet.html
@@ -73,7 +73,7 @@ WordNet offers six methods to measure similarity.\cite{pedersen2004wordnet}
 % TODO: make this not copied from http://www.nltk.org/howto/wordnet.html
 \end{itemize}
 
-From these methods, the Wu-Palmer method is a good balance between performance and accuracy.\cite{budanitsky2006evaluating,seco2004intrinsic,mihalcea2006corpus}
+From these methods, the Wu-Palmer method is a good balance between performance and accuracy\cite{budanitsky2006evaluating,seco2004intrinsic,mihalcea2006corpus}.
 
 \subsection{Semantic Similarity of Two-Word Compounds}
 
@@ -86,9 +86,9 @@ The formula used for computing the total similarity is
 \begin{equation} \label{eq:1wordto2word}
 	\alpha * sim(ca, cb[1]) + \beta * sim(ca, cb[0])
 \end{equation}
-where $ \alpha $ and $ \beta $ are the weights, $ ca $ indicates the single word, and $ cb $ is an array representing the two-word compound, where $ cb[0] $ is the first word of the two-word compound and $ cb[1] $ is the second word, and $ sim(X,Y) $ computes the semantic similarity of $ X $ and $ Y $.
+where $ \alpha $ and $ \beta $ are the weights, $ ca $ indicates the single word, and $ cb $ is an array representing the two-word compound, where $ cb[0] $ is the first word of the two-word compound and $ cb[1] $ is the second word, and $ sim(X,Y) $ computes the semantic similarity of $ X $ and $ Y $. % TODO: present this in a simpler way so people can easily understand it. Maybe write the compounds one after the other and enumerate each word (c1w1`, c1w2, c2w1, c2w1 or c11, c12, c21 and c22) and update the formula. Always provide some examples, compare the similarity results and explain what it means.
 
-We have found that weights of $ \alpha = 0.67 $ and $ \beta = 0.33 $ deliver acceptable accuracy. % TODO: actually test this one.
+We have found that weights of $ \alpha = 0.67 $ and $ \beta = 0.33 $ deliver acceptable accuracy. % TODO: actually test this one. % TODO: back this claim with some evidence.
 
 \subsubsection{Comparing a Two-Word Compound to a Two-Word Compound}
 
@@ -104,16 +104,16 @@ We have found that weights of $ \alpha = 0.4 $, $ \beta = 0.1 $, and $ \gamma = 
 \section{Evaluation Methodology}
 
 % Just semantic similarity
-Although there is no standard for computational evaluation of semantic similarity, there are generally three accepted methods.\cite{meng2013review}
+Although there is no standard for computational evaluation of semantic similarity, there are generally three accepted methods\cite{meng2013review}.
 
 Firstly, a theoretical examination of a computational measure can be made for those mathematical properties thought desirable, such as whether it is a metric, whether its parameter-projections are smooth functions, and so on. % TODO: Find out exactly what this means & rephrase it so I understand. It's quite complex language. Taken from meng2013review
 
-Secondly, the coefficients of correlation with human judgement can be calculated, measured, and compared.\cite{zhou2008new,seco2004intrinsic}
+Secondly, the coefficients of correlation with human judgement can be calculated, measured, and compared\cite{zhou2008new,seco2004intrinsic}.
 
-Thirdly, if an application requires a measure of semantic similarity, we can compare the performance of different measures, while all other aspects of the application remain constant, to find the most effective measure.\cite{blanchard2006tree,budanitsky2006evaluating}
+Thirdly, if an application requires a measure of semantic similarity, we can compare the performance of different measures, while all other aspects of the application remain constant, to find the most effective measure\cite{blanchard2006tree,budanitsky2006evaluating}. % TODO: Explain each method in more detail.
 
 % Semantic similarity and relatedness
-The techniques for measuring semantic similarity and relatedness can be roughly categorized into two main categories:\cite{agirre2009study} Those that rely on pre-existing knowledge, such as thesauri, encyclopedias, and semantic networks,\cite{alvarez2007graph,yang2005measuring,hughes2007lexical} and those inducing distributional properties of words from corpora.\cite{sahami2006web,chen2006novel,bollegala2007measuring}
+The techniques for measuring semantic similarity and relatedness can be roughly categorized into two main categories:\cite{agirre2009study} Those that rely on pre-existing knowledge, such as thesauri, encyclopedias, and semantic networks,\cite{alvarez2007graph,yang2005measuring,hughes2007lexical} and those inducing distributional properties of words from corpora\cite{sahami2006web,chen2006novel,bollegala2007measuring}.
 
 
 % Below is subject matter that I want to have handled in this section.
