All citations should now be before punctuation marks.

--- a/Thesis/Concept Suggestor.tex
+++ b/Thesis/Concept Suggestor.tex
@@ -113,7 +113,7 @@ Secondly, the coefficients of correlation with human judgement can be calculated
 Thirdly, if an application requires a measure of semantic similarity, we can compare the performance of different measures, while all other aspects of the application remain constant, to find the most effective measure\cite{blanchard2006tree,budanitsky2006evaluating}. % TODO: Explain each method in more detail.
 
 % Semantic similarity and relatedness
-The techniques for measuring semantic similarity and relatedness can be roughly categorized into two main categories:\cite{agirre2009study} Those that rely on pre-existing knowledge, such as thesauri, encyclopedias, and semantic networks,\cite{alvarez2007graph,yang2005measuring,hughes2007lexical} and those inducing distributional properties of words from corpora\cite{sahami2006web,chen2006novel,bollegala2007measuring}.
+The techniques for measuring semantic similarity and relatedness can be roughly categorized into two main categories\cite{agirre2009study}: Those that rely on pre-existing knowledge, such as thesauri, encyclopedias, and semantic networks\cite{alvarez2007graph,yang2005measuring,hughes2007lexical}, and those inducing distributional properties of words from corpora\cite{sahami2006web,chen2006novel,bollegala2007measuring}.
 
 
 % Below is subject matter that I want to have handled in this section.
